--- a/css/style.scss
+++ b/css/style.scss
@@ -30,14 +30,14 @@ header {
     display: flex;
     background-color: #311e00;
     #img {
-        margin: 2% 10%;
+        margin: 2% 6%;
         width: 20%;
         img {
             width: 100%;
         }
     }
     #menu {
-        width: 60%;
+        width: auto;
         display: block;
         ul {
             margin: 5% 0;
@@ -61,6 +61,14 @@ header {
     align-items: center;
     flex-direction: row;
     flex-wrap: wrap;
+    >h3 {
+        text-align: justify;
+        width: 100%;
+        margin: 10% 30%;
+        padding-top: 50px;
+        font-size: xx-large;
+        color: #6d4403;
+    }
     >div {
         width: 97%;
         margin: 1.5%;
@@ -102,6 +110,22 @@ header {
             img {
                 max-width: 70%;
             }
+        }
+    }
+    #info {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        >div {
+            margin-left: 20%;
+            margin-bottom: 30px;
+        }
+        #name {
+            margin-top: 5%;
+            width: 20%;
+            font-size: xx-large;
+            font-style: normal;
+            margin-bottom: 30px;
         }
     }
 }
