Added .zone config

--- a/css/style.scss
+++ b/css/style.scss
@@ -181,6 +181,11 @@ header:hover {
                 width: 33%;
                 margin-top: 2%;
             }
+            .zone {
+                margin: 0;
+                width: 33%;
+                margin-top: 2%;
+            }
         }
         header {
             width: 100%;
