--- a/css/style.css
+++ b/css/style.css
@@ -211,6 +211,11 @@ header:hover {
     width: 33%;
     margin-top: 2%;
   }
+  #detalle1 #info .zone {
+    margin: 0;
+    width: 33%;
+    margin-top: 2%;
+  }
   #detalle1 header {
     width: 100%;
     display: -webkit-box;
